Quick hack fix for the issue where a link in a .selected tr is invisible. A better UI person should do something better here (e.g. change the .selected color so it isn't $link). You can see an example of this by running an ad-hoc analysis (from the the reportingui module) and looking at the highlighted row.

--- a/scss/src/main/resources/sass/reference/fragments/_base.scss
+++ b/scss/src/main/resources/sass/reference/fragments/_base.scss
@@ -340,6 +340,10 @@ table {
   tr.selected{
     background: $link;
     color: white;
+
+    a {
+      color: white
+    }
   }
   
   thead th {
